force-app/main/default/objects/Category__c/fields/Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Category_Id__c</fullName>
    <displayFormat>C{0000}</displayFormat>
    <label>Category Id</label>
    <type>AutoNumber</type>
</CustomField>