force-app/main/default/objects/Category__c/fields/Page_Description__c.field-meta.xml
<CustomField>
    <fullName>Page_Description__c</fullName>
    <label>Page Description</label>
    <type>TextArea</type>
</CustomField>