force-app/main/default/objects/Category__c/fields/Page_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Page_Keywords__c</fullName>
    <label>Page Keywords</label>
    <type>TextArea</type>
</CustomField>