force-app/main/default/objects/Category__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subcategory</label>
    <referenceTo>Subcategory__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>